# cc-cover

./: .gitignore  README.md  config.example.json  gui_launcher.py  pyproject.toml  run.ps1  setup.ps1  start.cmd
.github/workflows/: tests.yml  windows-gui.yml
src/cc_cover/: __main__.py  cli.py  discovery.py  engines.py  formats.py  gui.py  gui_support.py  models.py  pipeline.py
tests/: test_cli.py  test_discovery.py  test_formats.py  test_gui_support.py  test_pipeline_helpers.py  test_project_contract.py
